[package]
name = "rtrust"
version = "0.1.0"
edition = "2021"


[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
futures-intrusive = "0.5.0"
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.17.0"
winit = "0.28.6"
env_logger = "0.10.0"
glam = { version = "0.24.1", features = ["bytemuck"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"

[build-dependencies]
spirv-builder = "0.9"

[profile.release-with-debug]
inherits = "release"
debug = true
